--- a/index.html
+++ b/index.html
@@ -9,19 +9,31 @@
     <!-- Tailwind and Daisyui cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    
+
+    <!-- Font-family lato -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+
     <!-- Custom tailwind -->
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'btn-color': '#F85559',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
+
+    <style>
+        lato-font{
+            font-family: "Lato", sans-serif;
+        }
+    </style>
 </head>
 
 <body>
