--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
     <!-- header section -->
     <header class="max-w-[1440px] w-full lg:w-3/4 px-5 lg:mx-auto">
+
+        <!-- nav section -->
         <nav class="flex items-center justify-between lg:bg-btn-color rounded-full lg:px-12 lg:py-8 my-14">
             <div class="hidden lg:flex">
                 <ul class="hidden lg:flex gap-7 text-white font-medium p-2">
@@ -51,7 +53,7 @@
             </div>
             <div class="flex items-center gap-4">
                 <img src="images/logo.png" class="w-9" alt="">
-                <h3 class="lg:text-white font-bold text-sm lg:text-4xl">Fruit Burst</h3>
+                <h3 class="lg:text-white font-bold text-xl lg:text-4xl">Fruit Burst</h3>
             </div>
             <div>
                 <label class="hidden input input-bordered rounded-full lg:flex items-center gap-2 min-w-80">
@@ -65,32 +67,69 @@
                 <div class="lg:hidden">
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            class="h-5 w-5"
-                            fill="none"
-                            viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path
-                              stroke-linecap="round"
-                              stroke-linejoin="round"
-                              stroke-width="2"
-                              d="M4 6h16M4 12h16M4 18h7" />
-                          </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h16M4 18h7" />
+                            </svg>
                         </div>
-                        <ul
-                          tabindex="0"
-                          class="menu menu-sm bg-base-100 rounded-box z-[1] mt-3 w-28 p-2 shadow dropdown-content right-6">
-                          <li><a>Home</a></li>
-                          <li><a>About Us</a></li>
-                          <li><a>Shop</a></li>
-                          <li><a>All Fruits</a></li>
+                        <ul tabindex="0"
+                            class="menu menu-sm bg-base-100 rounded-box z-[1] mt-3 w-28 p-2 shadow dropdown-content right-6">
+                            <li><a>Home</a></li>
+                            <li><a>About Us</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>All Fruits</a></li>
                         </ul>
-                      </div>
                     </div>
                 </div>
             </div>
+            </div>
         </nav>
+
+        <!-- banner section -->
+        <div class="mb-96">
+            <div class="carousel w-full">
+
+                <!-- slide1 -->
+                <div id="slide1" class="carousel-item relative w-full bg-[url('images/banner1.png')] bg-cover bg-top">
+                    <div class="text-white flex flex-col justify-center items-center text-center mx-auto pt-20 pb-52 space-y-7">
+                        <h3 class="text-7xl font-extrabold">Exotic tastes at your<br> doorstep</h3>
+                        <p class="text-xl font-medium">We supply highly quality organic products</p>
+                        <button class="btn btn-primary">Shop Now</button>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+                <!-- slide2 -->
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp"
+                        class="w-full" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp"
+                        class="w-full" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="https://img.daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.webp"
+                        class="w-full" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- main section -->
