--- a/index.html
+++ b/index.html
@@ -90,62 +90,83 @@
         <div>
             <div class="carousel w-full">
 
-                <!-- slide1 -->               
-                <div id="slide1" class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner1.png')] bg-cover bg-center object-cover ">
-                    <div class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
+                <!-- slide1 -->
+                <div id="slide1"
+                    class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner1.png')] bg-cover bg-center object-cover ">
+                    <div
+                        class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
                         <h3 class="text-2xl lg:text-7xl font-extrabold">Exotic tastes at your<br> doorstep</h3>
                         <p class="text-sm lg:text-xl font-medium">We supply highly quality organic products</p>
                         <button class="btn bg-btn-color border-none text-white hover:bg-orange-600">Shop Now</button>
                     </div>
-                    <div class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                        <a href="#slide4" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
-                        <a href="#slide2" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
+                    <div
+                        class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
+                        <a href="#slide2"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
                     </div>
                 </div>
 
-                <!-- slide2 -->               
-                <div id="slide2" class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner2.png')] bg-cover bg-center object-cover ">
-                    <div class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
+                <!-- slide2 -->
+                <div id="slide2"
+                    class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner2.png')] bg-cover bg-center object-cover ">
+                    <div
+                        class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
                         <h3 class="text-2xl lg:text-7xl font-extrabold">Exotic tastes at your<br> doorstep</h3>
                         <p class="text-sm lg:text-xl font-medium">We supply highly quality organic products</p>
                         <button class="btn bg-btn-color border-none text-white hover:bg-orange-600">Shop Now</button>
                     </div>
-                    <div class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                        <a href="#slide1" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
-                        <a href="#slide3" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
+                    <div
+                        class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
+                        <a href="#slide3"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
                     </div>
                 </div>
 
-                <!-- slide3 -->               
-                <div id="slide3" class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner3.png')] bg-cover bg-center object-cover ">
-                    <div class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
+                <!-- slide3 -->
+                <div id="slide3"
+                    class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner3.png')] bg-cover bg-center object-cover ">
+                    <div
+                        class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
                         <h3 class="text-2xl lg:text-7xl font-extrabold">Exotic tastes at your<br> doorstep</h3>
                         <p class="text-sm lg:text-xl font-medium">We supply highly quality organic products</p>
                         <button class="btn bg-btn-color border-none text-white hover:bg-orange-600">Shop Now</button>
                     </div>
-                    <div class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                        <a href="#slide2" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
-                        <a href="#slide4" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
+                    <div
+                        class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
+                        <a href="#slide4"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
                     </div>
                 </div>
 
-                <!-- slide4 -->               
-                <div id="slide4" class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner4.png')] bg-cover bg-center object-cover ">
-                    <div class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
+                <!-- slide4 -->
+                <div id="slide4"
+                    class="carousel-item rounded-lg flex-col relative w-full bg-[linear-gradient(180deg,rgba(0,0,0,0.7),rgba(0,0,0,0.3)),url('images/banner4.png')] bg-cover bg-center object-cover ">
+                    <div
+                        class="text-white flex flex-col justify-center items-center text-center mx-auto py-7 lg:pt-20 lg:pb-52 space-y-7">
                         <h3 class="text-2xl lg:text-7xl font-extrabold">Exotic tastes at your<br> doorstep</h3>
                         <p class="text-sm lg:text-xl font-medium">We supply highly quality organic products</p>
                         <button class="btn bg-btn-color border-none text-white hover:bg-orange-600">Shop Now</button>
                     </div>
-                    <div class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                        <a href="#slide3" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
-                        <a href="#slide1" class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
+                    <div
+                        class="absolute left-1 right-1 lg:left-5 lg:right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❮</a>
+                        <a href="#slide1"
+                            class="btn btn-circle bg-transparent lg:bg-black text-white border-none lg:text-3xl">❯</a>
                     </div>
                 </div>
 
 
 
             </div>
-            <div class="bg-white hidden lg:flex justify-around items-center max-w-[1196px] mx-auto gap-20 px-[70px] py-12 drop-shadow-lg rounded-lg -translate-y-32">
+            <div
+                class="bg-white hidden lg:flex justify-around items-center max-w-[1196px] mx-auto gap-20 px-[70px] py-12 drop-shadow-lg rounded-lg -translate-y-32">
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="images/fruit1.png" alt="">
                     <h4 class="font-medium text-xl text-[#121212] opacity-85">Grape</h4>
@@ -171,8 +192,54 @@
     </header>
 
     <!-- main section -->
-    <main class="max-w-[1440px] w-3/4 mx-auto px-5">
+    <main class="max-w-[1440px] mx-auto px-5">
 
+        <!-- deal section -->
+        <section class="my-36">
+            <div class="flex justify-between items-center">
+                <div class="space-y-6">
+                    <h3 class="text-5xl font-extrabold text-[#121212]">Deal of the day</h3>
+                    <p class="max-w-xl"> Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
+                <div>
+                    <div class="grid auto-cols-max grid-flow-col gap-5 text-center">
+                        <div class="flex flex-col">
+                          <span class="countdown font-extrabold text-[#121212] text-5xl">
+                            <span style="--value:15;"></span>
+                          </span>
+                          days
+                        </div>
+                        <div class="flex flex-col">
+                          <span class="countdown font-extrabold text-[#121212] text-5xl">
+                            <span style="--value:10;"></span>
+                          </span>
+                          hours
+                        </div>
+                        <div class="flex flex-col">
+                          <span class="countdown font-extrabold text-[#121212] text-5xl">
+                            <span style="--value:24;"></span>
+                          </span>
+                          min
+                        </div>
+                        <div class="flex flex-col">
+                          <span class="countdown font-extrabold text-[#121212] text-5xl">
+                            <span style="--value:${counter};"></span>
+                          </span>
+                          sec
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <div class="flex flex-col items-center justify-center gap-6 border border-gray-200 rounded-lg">
+                    <img src="images/fruit6.png" alt="">
+                    <h3 class="text-2xl font-bold text-[#121212] mt-6">12.90$ - 18.85$</h3>
+                    <div class="divider"></div>
+                    <p class="opacity-65">Apples</p>
+                    <button class="btn btn-link text-btn-color">Details</button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer section -->
