added team  section

--- a/index.html
+++ b/index.html
@@ -347,8 +347,10 @@
                     <img src="images/member1.png" alt="">
                     <h4 class="text-2xl mt-8 mb-2 font-bold text-center">Awlad Hossain</h4>
                     <p class="font-medium mb-4">Fruits Expert</p>
-                    <div>
-
+                    <div class="flex gap-3">
+                        <div><img src="images/icons/Group 34.png" alt=""></div>
+                        <div><img src="images/icons/twitter  1.png" alt=""></div>
+                        <div><img src="images/icons/linkedin 1.png" alt=""></div>
                     </div>
                 </div>
 
@@ -357,8 +359,10 @@
                     <img src="images/member2.png" alt="">
                     <h4 class="text-2xl mt-8 mb-2 font-bold text-center">Safia Chowdhury</h4>
                     <p class="font-medium mb-4">Fruits Expert</p>
-                    <div>
-
+                    <div class="flex gap-3">
+                        <div><img src="images/icons/Group 34.png" alt=""></div>
+                        <div><img src="images/icons/twitter  1.png" alt=""></div>
+                        <div><img src="images/icons/linkedin 1.png" alt=""></div>
                     </div>
                 </div>
 
@@ -367,8 +371,10 @@
                     <img src="images/member3.png" alt="">
                     <h4 class="text-2xl mt-8 mb-2 font-bold text-center">Rokib Hossain</h4>
                     <p class="font-medium mb-4">Fruits Expert</p>
-                    <div>
-
+                    <div class="flex gap-3">
+                        <div><img src="images/icons/Group 34.png" alt=""></div>
+                        <div><img src="images/icons/twitter  1.png" alt=""></div>
+                        <div><img src="images/icons/linkedin 1.png" alt=""></div>
                     </div>
                 </div>
 
@@ -377,8 +383,10 @@
                     <img src="images/member4.png" alt="">
                     <h4 class="text-2xl mt-8 mb-2 font-bold text-center">Chaity</h4>
                     <p class="font-medium mb-4">Fruits Expert</p>
-                    <div>
-
+                    <div class="flex gap-3">
+                        <div><img src="images/icons/Group 34.png" alt=""></div>
+                        <div><img src="images/icons/twitter  1.png" alt=""></div>
+                        <div><img src="images/icons/linkedin 1.png" alt=""></div>
                     </div>
                 </div>
             </div>
