--- a/index.html
+++ b/index.html
@@ -399,17 +399,82 @@
                 <p class="max-w-xl mx-auto"> Contrary to popular belief, is not simply random text. It has roots in a
                     piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
-            <div>
-                <div>
-                    <div>
 
+            <!-- container div -->
+            <div class="flex gap-12 items-center flex-col lg:flex-row">
+
+                <!-- left -->
+                <div class="space-y-12 flex-1 px-12 lg:p-0 text-center order-2 lg:order-1">
+                    <div class="flex flex-col lg:flex-row gap-6 items-center">
+                        <div>
+                            <img src="images/icons/Group 46 (1).png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <h3 class="font-extrabold text-2xl">Dedicated Team</h3>
+                            <div class="divider divider-neutral"></div>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-6 items-center">
+                        <div>
+                            <img src="images/icons/Group 46.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <h3 class="font-extrabold text-2xl">Fresh is Best</h3>
+                            <div class="divider divider-neutral"></div>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-6 items-center">
+                        <div>
+                            <img src="images/icons/Group 1.png" alt="">
+                        </div>
+                        <div class="space-y-4">
+                            <h3 class="font-extrabold text-2xl">Gift Certificates</h3>
+                            <div class="divider divider-neutral"></div>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
                     </div>
                 </div>
-                <div>
 
+                <!-- center -->
+                <div class="flex-1 order-1 lg:order-2">
+                    <img src="images/whychoose1.png" alt="">
                 </div>
-                <div>
 
+                <!-- right -->
+                <div class="space-y-12 text-center px-12 lg:p-0 lg:text-right flex-1 order-3">
+                    <div class="flex flex-col lg:flex-row gap-6 items-center">
+                        <div class="space-y-4 order-2 lg:order-1">
+                            <h3 class="font-extrabold text-2xl">Integrated Supplier</h3>
+                            <div class="divider divider-neutral"></div>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                        <div class="order-1 lg:order-2">
+                            <img src="images/icons/fruites.png" alt="">
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-6 items-center">
+                        
+                        <div class="space-y-4 order-2 lg:order-1">
+                            <h3 class="font-extrabold text-2xl">Sustainable Practice</h3>
+                            <div class="divider divider-neutral"></div>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                        <div class="order-1 lg:order-2">
+                            <img src="images/icons/ice-creame.png" alt="">
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-6 items-center">
+                        <div class="space-y-4 order-2 lg:order-1">
+                            <h3 class="font-extrabold text-2xl">The Benefits Only</h3>
+                            <div class="divider divider-neutral"></div>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                        <div class="order-1 lg:order-2 p-5 bg-gray-200 rounded-full">
+                            <img src="images/icons/Group 53.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
