added and responsive footer section

--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@
                         <div class="space-y-4">
                             <h3 class="font-extrabold text-2xl">Dedicated Team</h3>
                             <div class="divider divider-neutral"></div>
-                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most
+                                amazing and fresh fruits.</p>
                         </div>
                     </div>
                     <div class="flex flex-col lg:flex-row gap-6 items-center">
@@ -422,7 +423,8 @@
                         <div class="space-y-4">
                             <h3 class="font-extrabold text-2xl">Fresh is Best</h3>
                             <div class="divider divider-neutral"></div>
-                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most
+                                amazing and fresh fruits.</p>
                         </div>
                     </div>
                     <div class="flex flex-col lg:flex-row gap-6 items-center">
@@ -432,7 +434,8 @@
                         <div class="space-y-4">
                             <h3 class="font-extrabold text-2xl">Gift Certificates</h3>
                             <div class="divider divider-neutral"></div>
-                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most
+                                amazing and fresh fruits.</p>
                         </div>
                     </div>
                 </div>
@@ -448,18 +451,20 @@
                         <div class="space-y-4 order-2 lg:order-1">
                             <h3 class="font-extrabold text-2xl">Integrated Supplier</h3>
                             <div class="divider divider-neutral"></div>
-                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most
+                                amazing and fresh fruits.</p>
                         </div>
                         <div class="order-1 lg:order-2">
                             <img src="images/icons/fruites.png" alt="">
                         </div>
                     </div>
                     <div class="flex flex-col lg:flex-row gap-6 items-center">
-                        
+
                         <div class="space-y-4 order-2 lg:order-1">
                             <h3 class="font-extrabold text-2xl">Sustainable Practice</h3>
                             <div class="divider divider-neutral"></div>
-                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most
+                                amazing and fresh fruits.</p>
                         </div>
                         <div class="order-1 lg:order-2">
                             <img src="images/icons/ice-creame.png" alt="">
@@ -469,7 +474,8 @@
                         <div class="space-y-4 order-2 lg:order-1">
                             <h3 class="font-extrabold text-2xl">The Benefits Only</h3>
                             <div class="divider divider-neutral"></div>
-                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="max-w-80 opacity-70">Professional employees are there for you to pick the most
+                                amazing and fresh fruits.</p>
                         </div>
                         <div class="order-1 lg:order-2 p-5 bg-gray-200 rounded-full">
                             <img src="images/icons/Group 53.png" alt="">
@@ -478,11 +484,33 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <!-- footer section -->
-    <footer>
-
+    <footer class="footer footer-center py-36 bg-black text-primary-content p-10">
+        <div class="flex items-center gap-4">
+            <img src="images/logo.png" class="w-9" alt="">
+            <h3 class="text-white font-bold text-[40px]">Fruit Burst</h3>
+        </div>
+        <div class="flex">
+            <ul class="flex flex-wrap justify-center gap-6 lg:gap-14 text-lg text-white font-medium p-2">
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Shop</a></li>
+                <li><a href="">All Fruits</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">My Account</a></li>
+            </ul>
+        </div>
+        <div class="flex justify-center gap-6">
+            <div><img src="images/icons/twitter 2.png" alt=""></div>
+            <div><img src="images/icons/Group 48.png" alt=""></div>
+            <div><img src="images/icons/Group 49.png" alt=""></div>
+            <div><img src="images/icons/Group 50.png" alt=""></div>
+            <div><img src="images/icons/Group 51.png" alt=""></div>
+            <div><img src="images/icons/Group 52.png" alt=""></div>
+        </div>
     </footer>
 </body>
 
